// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`parallel option should match snapshot for the "2" value: assets 1`] = `
{
  "four.js": "(()=>{var o={921(o){o.exports=function(){console.log(7)}}};const t={};(function n(r){const s=t[r];if(void 0!==s)return s.exports;const e=t[r]={exports:{}};return o[r](e,e.exports,n),e.exports})(921)})();",
  "one.js": "(()=>{var o={921(o){o.exports=function(){console.log(7)}}};const t={};(function n(r){const s=t[r];if(void 0!==s)return s.exports;const e=t[r]={exports:{}};return o[r](e,e.exports,n),e.exports})(921)})();",
  "three.js": "(()=>{var o={921(o){o.exports=function(){console.log(7)}}};const t={};(function n(r){const s=t[r];if(void 0!==s)return s.exports;const e=t[r]={exports:{}};return o[r](e,e.exports,n),e.exports})(921)})();",
  "two.js": "(()=>{var o={921(o){o.exports=function(){console.log(7)}}};const t={};(function n(r){const s=t[r];if(void 0!==s)return s.exports;const e=t[r]={exports:{}};return o[r](e,e.exports,n),e.exports})(921)})();",
}
`;

exports[`parallel option should match snapshot for the "2" value: errors 1`] = `[]`;

exports[`parallel option should match snapshot for the "2" value: warnings 1`] = `[]`;

exports[`parallel option should match snapshot for the "false" value: assets 1`] = `
{
  "four.js": "(()=>{var o={921(o){o.exports=function(){console.log(7)}}};const t={};(function n(r){const s=t[r];if(void 0!==s)return s.exports;const e=t[r]={exports:{}};return o[r](e,e.exports,n),e.exports})(921)})();",
  "one.js": "(()=>{var o={921(o){o.exports=function(){console.log(7)}}};const t={};(function n(r){const s=t[r];if(void 0!==s)return s.exports;const e=t[r]={exports:{}};return o[r](e,e.exports,n),e.exports})(921)})();",
  "three.js": "(()=>{var o={921(o){o.exports=function(){console.log(7)}}};const t={};(function n(r){const s=t[r];if(void 0!==s)return s.exports;const e=t[r]={exports:{}};return o[r](e,e.exports,n),e.exports})(921)})();",
  "two.js": "(()=>{var o={921(o){o.exports=function(){console.log(7)}}};const t={};(function n(r){const s=t[r];if(void 0!==s)return s.exports;const e=t[r]={exports:{}};return o[r](e,e.exports,n),e.exports})(921)})();",
}
`;

exports[`parallel option should match snapshot for the "false" value: errors 1`] = `[]`;

exports[`parallel option should match snapshot for the "false" value: warnings 1`] = `[]`;

exports[`parallel option should match snapshot for the "true" value and the number of files is less than the number of cores: assets 1`] = `
{
  "entry-0.js": "(()=>{var o={921(o){o.exports=function(){console.log(7)}}};const t={};(function n(r){const s=t[r];if(void 0!==s)return s.exports;const e=t[r]={exports:{}};return o[r](e,e.exports,n),e.exports})(921)})();",
  "entry-1.js": "(()=>{var o={921(o){o.exports=function(){console.log(7)}}};const t={};(function n(r){const s=t[r];if(void 0!==s)return s.exports;const e=t[r]={exports:{}};return o[r](e,e.exports,n),e.exports})(921)})();",
}
`;

exports[`parallel option should match snapshot for the "true" value and the number of files is less than the number of cores: errors 1`] = `[]`;

exports[`parallel option should match snapshot for the "true" value and the number of files is less than the number of cores: warnings 1`] = `[]`;

exports[`parallel option should match snapshot for the "true" value and the number of files is more than the number of cores: assets 1`] = `
{
  "eight.js": "(()=>{var o={921(o){o.exports=function(){console.log(7)}}};const t={};(function n(r){const s=t[r];if(void 0!==s)return s.exports;const e=t[r]={exports:{}};return o[r](e,e.exports,n),e.exports})(921)})();",
  "five.js": "(()=>{var o={921(o){o.exports=function(){console.log(7)}}};const t={};(function n(r){const s=t[r];if(void 0!==s)return s.exports;const e=t[r]={exports:{}};return o[r](e,e.exports,n),e.exports})(921)})();",
  "four.js": "(()=>{var o={921(o){o.exports=function(){console.log(7)}}};const t={};(function n(r){const s=t[r];if(void 0!==s)return s.exports;const e=t[r]={exports:{}};return o[r](e,e.exports,n),e.exports})(921)})();",
  "one.js": "(()=>{var o={921(o){o.exports=function(){console.log(7)}}};const t={};(function n(r){const s=t[r];if(void 0!==s)return s.exports;const e=t[r]={exports:{}};return o[r](e,e.exports,n),e.exports})(921)})();",
  "seven.js": "(()=>{var o={921(o){o.exports=function(){console.log(7)}}};const t={};(function n(r){const s=t[r];if(void 0!==s)return s.exports;const e=t[r]={exports:{}};return o[r](e,e.exports,n),e.exports})(921)})();",
  "six.js": "(()=>{var o={921(o){o.exports=function(){console.log(7)}}};const t={};(function n(r){const s=t[r];if(void 0!==s)return s.exports;const e=t[r]={exports:{}};return o[r](e,e.exports,n),e.exports})(921)})();",
  "three.js": "(()=>{var o={921(o){o.exports=function(){console.log(7)}}};const t={};(function n(r){const s=t[r];if(void 0!==s)return s.exports;const e=t[r]={exports:{}};return o[r](e,e.exports,n),e.exports})(921)})();",
  "two.js": "(()=>{var o={921(o){o.exports=function(){console.log(7)}}};const t={};(function n(r){const s=t[r];if(void 0!==s)return s.exports;const e=t[r]={exports:{}};return o[r](e,e.exports,n),e.exports})(921)})();",
}
`;

exports[`parallel option should match snapshot for the "true" value and the number of files is more than the number of cores: errors 1`] = `[]`;

exports[`parallel option should match snapshot for the "true" value and the number of files is more than the number of cores: warnings 1`] = `[]`;

exports[`parallel option should match snapshot for the "true" value and the number of files is same than the number of cores: assets 1`] = `
{
  "entry-0.js": "(()=>{var o={921(o){o.exports=function(){console.log(7)}}};const t={};(function n(r){const s=t[r];if(void 0!==s)return s.exports;const e=t[r]={exports:{}};return o[r](e,e.exports,n),e.exports})(921)})();",
  "entry-1.js": "(()=>{var o={921(o){o.exports=function(){console.log(7)}}};const t={};(function n(r){const s=t[r];if(void 0!==s)return s.exports;const e=t[r]={exports:{}};return o[r](e,e.exports,n),e.exports})(921)})();",
  "entry-2.js": "(()=>{var o={921(o){o.exports=function(){console.log(7)}}};const t={};(function n(r){const s=t[r];if(void 0!==s)return s.exports;const e=t[r]={exports:{}};return o[r](e,e.exports,n),e.exports})(921)})();",
  "entry-3.js": "(()=>{var o={921(o){o.exports=function(){console.log(7)}}};const t={};(function n(r){const s=t[r];if(void 0!==s)return s.exports;const e=t[r]={exports:{}};return o[r](e,e.exports,n),e.exports})(921)})();",
}
`;

exports[`parallel option should match snapshot for the "true" value and the number of files is same than the number of cores: errors 1`] = `[]`;

exports[`parallel option should match snapshot for the "true" value and the number of files is same than the number of cores: warnings 1`] = `[]`;

exports[`parallel option should match snapshot for the "true" value when only one file passed: assets 1`] = `
{
  "main.js": "(()=>{var o={921(o){o.exports=function(){console.log(7)}}};const t={};(function n(r){const s=t[r];if(void 0!==s)return s.exports;const e=t[r]={exports:{}};return o[r](e,e.exports,n),e.exports})(921)})();",
}
`;

exports[`parallel option should match snapshot for the "true" value when only one file passed: errors 1`] = `[]`;

exports[`parallel option should match snapshot for the "true" value when only one file passed: warnings 1`] = `[]`;

exports[`parallel option should match snapshot for the "true" value: assets 1`] = `
{
  "four.js": "(()=>{var o={921(o){o.exports=function(){console.log(7)}}};const t={};(function n(r){const s=t[r];if(void 0!==s)return s.exports;const e=t[r]={exports:{}};return o[r](e,e.exports,n),e.exports})(921)})();",
  "one.js": "(()=>{var o={921(o){o.exports=function(){console.log(7)}}};const t={};(function n(r){const s=t[r];if(void 0!==s)return s.exports;const e=t[r]={exports:{}};return o[r](e,e.exports,n),e.exports})(921)})();",
  "three.js": "(()=>{var o={921(o){o.exports=function(){console.log(7)}}};const t={};(function n(r){const s=t[r];if(void 0!==s)return s.exports;const e=t[r]={exports:{}};return o[r](e,e.exports,n),e.exports})(921)})();",
  "two.js": "(()=>{var o={921(o){o.exports=function(){console.log(7)}}};const t={};(function n(r){const s=t[r];if(void 0!==s)return s.exports;const e=t[r]={exports:{}};return o[r](e,e.exports,n),e.exports})(921)})();",
}
`;

exports[`parallel option should match snapshot for the "true" value: errors 1`] = `[]`;

exports[`parallel option should match snapshot for the "true" value: warnings 1`] = `[]`;

exports[`parallel option should match snapshot for the "undefined" value: assets 1`] = `
{
  "four.js": "(()=>{var o={921(o){o.exports=function(){console.log(7)}}};const t={};(function n(r){const s=t[r];if(void 0!==s)return s.exports;const e=t[r]={exports:{}};return o[r](e,e.exports,n),e.exports})(921)})();",
  "one.js": "(()=>{var o={921(o){o.exports=function(){console.log(7)}}};const t={};(function n(r){const s=t[r];if(void 0!==s)return s.exports;const e=t[r]={exports:{}};return o[r](e,e.exports,n),e.exports})(921)})();",
  "three.js": "(()=>{var o={921(o){o.exports=function(){console.log(7)}}};const t={};(function n(r){const s=t[r];if(void 0!==s)return s.exports;const e=t[r]={exports:{}};return o[r](e,e.exports,n),e.exports})(921)})();",
  "two.js": "(()=>{var o={921(o){o.exports=function(){console.log(7)}}};const t={};(function n(r){const s=t[r];if(void 0!==s)return s.exports;const e=t[r]={exports:{}};return o[r](e,e.exports,n),e.exports})(921)})();",
}
`;

exports[`parallel option should match snapshot for the "undefined" value: errors 1`] = `[]`;

exports[`parallel option should match snapshot for the "undefined" value: warnings 1`] = `[]`;

exports[`parallel option should match snapshot when a value is not specify: assets 1`] = `
{
  "four.js": "(()=>{var o={921(o){o.exports=function(){console.log(7)}}};const t={};(function n(r){const s=t[r];if(void 0!==s)return s.exports;const e=t[r]={exports:{}};return o[r](e,e.exports,n),e.exports})(921)})();",
  "one.js": "(()=>{var o={921(o){o.exports=function(){console.log(7)}}};const t={};(function n(r){const s=t[r];if(void 0!==s)return s.exports;const e=t[r]={exports:{}};return o[r](e,e.exports,n),e.exports})(921)})();",
  "three.js": "(()=>{var o={921(o){o.exports=function(){console.log(7)}}};const t={};(function n(r){const s=t[r];if(void 0!==s)return s.exports;const e=t[r]={exports:{}};return o[r](e,e.exports,n),e.exports})(921)})();",
  "two.js": "(()=>{var o={921(o){o.exports=function(){console.log(7)}}};const t={};(function n(r){const s=t[r];if(void 0!==s)return s.exports;const e=t[r]={exports:{}};return o[r](e,e.exports,n),e.exports})(921)})();",
}
`;

exports[`parallel option should match snapshot when a value is not specify: errors 1`] = `[]`;

exports[`parallel option should match snapshot when a value is not specify: warnings 1`] = `[]`;

exports[`worker normalizes when minimizerOptions.output.comments is string: all 1`] = `
{
  "code": "var foo=1;/* hello */
// Comment
/* duplicate */
/* duplicate */",
  "errors": [],
  "extractedComments": [],
  "map": undefined,
  "warnings": [],
}
`;

exports[`worker should match snapshot when minimizerOptions.compress.comments is boolean 1`] = `
{
  "code": "var foo=1;",
  "errors": [],
  "extractedComments": [],
  "map": undefined,
  "warnings": [],
}
`;

exports[`worker should match snapshot when minimizerOptions.compress.comments is object 1`] = `
{
  "code": "var foo=1;",
  "errors": [],
  "extractedComments": [],
  "map": undefined,
  "warnings": [],
}
`;

exports[`worker should match snapshot when minimizerOptions.extractComments is number 1`] = `
{
  "code": "var foo=1;",
  "errors": [],
  "extractedComments": [],
  "map": undefined,
  "warnings": [],
}
`;

exports[`worker should match snapshot when minimizerOptions.mangle is "null" 1`] = `
{
  "code": "var foo=1;",
  "errors": [],
  "extractedComments": [],
  "map": undefined,
  "warnings": [],
}
`;

exports[`worker should match snapshot when minimizerOptions.mangle is boolean 1`] = `
{
  "code": "var foo=1;",
  "errors": [],
  "extractedComments": [],
  "map": undefined,
  "warnings": [],
}
`;

exports[`worker should match snapshot when minimizerOptions.mangle is object 1`] = `
{
  "code": "var a=1;",
  "errors": [],
  "extractedComments": [],
  "map": undefined,
  "warnings": [],
}
`;

exports[`worker should match snapshot when minimizerOptions.output.comments is string: some 1`] = `
{
  "code": "var foo=1;",
  "errors": [],
  "extractedComments": [],
  "map": undefined,
  "warnings": [],
}
`;

exports[`worker should match snapshot when options.extractComments is "all" value 1`] = `
{
  "code": "var foo=1;",
  "errors": [],
  "extractedComments": [
    "/* hello */",
    "// Comment",
    "/* duplicate */",
  ],
  "map": undefined,
  "warnings": [],
}
`;

exports[`worker should match snapshot when options.extractComments is "false" 1`] = `
{
  "code": "var foo=1;",
  "errors": [],
  "extractedComments": [],
  "map": undefined,
  "warnings": [],
}
`;

exports[`worker should match snapshot when options.extractComments is "some" value 1`] = `
{
  "code": "var foo=1;",
  "errors": [],
  "extractedComments": [],
  "map": undefined,
  "warnings": [],
}
`;

exports[`worker should match snapshot when options.extractComments is "true" 1`] = `
{
  "code": "var foo=1;",
  "errors": [],
  "extractedComments": [],
  "map": undefined,
  "warnings": [],
}
`;

exports[`worker should match snapshot when options.extractComments is Function 1`] = `
{
  "code": "var foo=1;",
  "errors": [],
  "extractedComments": [
    "/* hello */",
    "// Comment",
    "/* duplicate */",
  ],
  "map": undefined,
  "warnings": [],
}
`;

exports[`worker should match snapshot when options.extractComments is Object with "all" value 1`] = `
{
  "code": "var foo=1;",
  "errors": [],
  "extractedComments": [
    "/* hello */",
    "// Comment",
    "/* duplicate */",
  ],
  "map": undefined,
  "warnings": [],
}
`;

exports[`worker should match snapshot when options.extractComments is Object with "some" value 1`] = `
{
  "code": "var foo=1;",
  "errors": [],
  "extractedComments": [],
  "map": undefined,
  "warnings": [],
}
`;

exports[`worker should match snapshot when options.extractComments is Object with "true" value 1`] = `
{
  "code": "var foo=1;",
  "errors": [],
  "extractedComments": [],
  "map": undefined,
  "warnings": [],
}
`;

exports[`worker should match snapshot when options.extractComments is RegExp 1`] = `
{
  "code": "var foo=1;",
  "errors": [],
  "extractedComments": [
    "/* hello */",
  ],
  "map": undefined,
  "warnings": [],
}
`;

exports[`worker should match snapshot when options.extractComments is empty Object 1`] = `
{
  "code": "var foo=1;",
  "errors": [],
  "extractedComments": [],
  "map": undefined,
  "warnings": [],
}
`;

exports[`worker should match snapshot when options.output.comments is "some" 1`] = `
{
  "code": undefined,
  "errors": [],
  "extractedComments": [],
  "map": undefined,
  "warnings": [],
}
`;

exports[`worker should match snapshot with extract option set to a single file 1`] = `
{
  "code": "/******/function hello(o){console.log(o)}",
  "errors": [],
  "extractedComments": [],
  "map": undefined,
  "warnings": [],
}
`;

exports[`worker should match snapshot with options.inputSourceMap 1`] = `
{
  "code": "function foo(f){if(f)return bar()}",
  "errors": [],
  "extractedComments": [],
  "map": {
    "mappings": "AAAA,SAASA,IAAIC,GACT,GACIA,EAAA,OACAC,KAAAA",
    "names": [
      "foo",
      "x",
      "not_called1",
    ],
    "sources": [
      "test1.js",
    ],
    "version": 3,
  },
  "warnings": [],
}
`;
